# project-011

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE_3_3_COMPLETION_SUMMARY.md  PHASE_4_TASK_MANAGEMENT_COMPLETION_SUMMARY.md  activate.sh  docker-compose.yml  pyproject.toml  requirements.txt
_docs/: CLAUDE .md  architecture.md  langgraph_supervisor_pattern.md  spec.md  todo.md
_docs/dev-log/: 2025-01-09_1015_multi-agent-optimization.md  2025-08-08_19-59_初期アーキテクチャ設計.md  2025-08-09_14-55_dimension-optimization-cleanup.md  2025-08-09_15-16_planning-phase-complete.md  (+26 more)
app/: main.py
init/: init.sql
scripts/: docker_integration_check.py  test_migration_demo.py
tests/: conftest.py  test_database.py  test_database_crud_operations.py  test_database_crud_validation.py  test_database_integration_performance.py  test_database_migration_integration.py  test_discord_log_integration.py  test_discord_manager.py  test_docker_compose.py  test_docker_integration.py  test_dockerfile.py  test_e2e_integration.py  test_env_example.py  test_env_loading.py  test_environment.py  test_langgraph_supervisor.py  test_logger.py  test_memory_system.py  test_memory_system_integration.py  test_migrations.py  test_phase9_tick_system.py  test_postgres_init.py  test_project_structure.py  test_real_api_gemini.py  test_real_discord_connection.py  test_report_generator.py  test_report_integration.py  test_report_statistics.py  test_requirements.py  test_settings.py  test_settings_validation.py  test_system_error_log_aggregation.py  test_task_crud.py  test_task_model.py  test_task_queue.py
(+20 files in other folders)
